--- a/OverlordProject/OverlordProject.vcxproj
+++ b/OverlordProject/OverlordProject.vcxproj
@@ -93,6 +93,7 @@
     <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Prefabs\ExamRangedCharacter.cpp" />
     <ClCompile Include="Prefabs\EnemyMeleeCharacter.cpp" />
     <ClCompile Include="Materials\BasicMaterial.cpp" />
     <ClCompile Include="Materials\BasicMaterial_Deferred.cpp" />
@@ -101,6 +102,7 @@
     <ClCompile Include="Materials\Shadow\DiffuseMaterial_Shadow_Skinned.cpp" />
     <ClCompile Include="Materials\Post\PostBlur.cpp" />
     <ClCompile Include="Prefabs\ExamCharacter.cpp" />
+    <ClCompile Include="Prefabs\Projectile.cpp" />
     <ClCompile Include="Scenes\Exam\ExamTestClass.cpp" />
     <ClCompile Include="Materials\DiffuseMaterial_Skinned.cpp" />
     <ClCompile Include="Prefabs\BoneObject.cpp" />
@@ -151,6 +153,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Prefabs\ExamRangedCharacter.h" />
     <ClInclude Include="Prefabs\EnemyMeleeCharacter.h" />
     <ClInclude Include="Materials\BasicMaterial.h" />
     <ClInclude Include="Materials\BasicMaterial_Deferred.h" />
@@ -159,6 +162,7 @@
     <ClInclude Include="Materials\Shadow\DiffuseMaterial_Shadow_Skinned.h" />
     <ClInclude Include="Materials\Post\PostBlur.h" />
     <ClInclude Include="Prefabs\ExamCharacter.h" />
+    <ClInclude Include="Prefabs\Projectile.h" />
     <ClInclude Include="Scenes\Exam\ExamTestClass.h" />
     <ClInclude Include="Materials\DiffuseMaterial_Skinned.h" />
     <ClInclude Include="Prefabs\BoneObject.h" />
@@ -189,19 +193,6 @@
     <ClInclude Include="MainGame.h" />
     <ClInclude Include="Scenes\Week 4\UberMaterialScene.h" />
     <ClInclude Include="Materials\UberMaterial.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="..\..\..\..\..\..\Users\bramr\Downloads\Element_arcane.png" />
-    <Image Include="..\..\..\..\..\..\Users\bramr\Downloads\Element_cold.png" />
-    <Image Include="..\..\..\..\..\..\Users\bramr\Downloads\Element_earth.png" />
-    <Image Include="..\..\..\..\..\..\Users\bramr\Downloads\Element_fire.png" />
-    <Image Include="..\..\..\..\..\..\Users\bramr\Downloads\Element_ice.png" />
-    <Image Include="..\..\..\..\..\..\Users\bramr\Downloads\Element_life.png" />
-    <Image Include="..\..\..\..\..\..\Users\bramr\Downloads\Element_lightning.png" />
-    <Image Include="..\..\..\..\..\..\Users\bramr\Downloads\Element_poison.png" />
-    <Image Include="..\..\..\..\..\..\Users\bramr\Downloads\Element_shield.png" />
-    <Image Include="..\..\..\..\..\..\Users\bramr\Downloads\Element_steam.png" />
-    <Image Include="..\..\..\..\..\..\Users\bramr\Downloads\Element_water.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
